IMPLEMENTATION: Add window to marker with adapter. Add font icons manager. Refactor.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">VisitWroclove</string>
+    <string name="ic_route">&#xf456;</string>
+    <string name="ic_details">&#xf2e4;</string>
 </resources>
