IMPLEMENTATION: Set activities responsible for displaying information about routes. Layouts and adapters added.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">VisitWroclove</string>
     <string name="ic_route">&#xf456;</string>
     <string name="ic_details">&#xf2e4;</string>
+    <string name="ic_time">&#xf26e;</string>
 </resources>
