--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,10 @@
     <string name="ic_route">&#xf456;</string>
     <string name="ic_details">&#xf2e4;</string>
     <string name="ic_time">&#xf26e;</string>
+    <string name="ic_panel_routes">&#xf37c;</string>
+    <string name="ic_panel_calendar">&#xf117;</string>
+    <string name="ic_panel_places">&#xf456;</string>
+    <string name="ic_panel_map">&#xf203;</string>
+    <string name="ic_panel_weather">&#xf3b0;</string>
+    <string name="ic_panel_buses">&#xf3af;</string>
 </resources>
